--- a/DuckHooNetwork/html/index.html
+++ b/DuckHooNetwork/html/index.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="../css/index.css" />
   </head>
 
-  <body class="max-vw-100 vh-100 overflow-auto">
+  <body class="max-vw-100 overflow-auto d-flex flex-column align-items-center">
     <!-- 네이게이션 바 -->
-    <nav class="navbar navbar-expand-lg px-3 py-1 position-sticky sticky-top">
+    <nav class="navbar navbar-expand-lg w-100 px-3 py-1 position-sticky sticky-top">
       <div class="container-fluid">
         <!-- 로고 부분 -->
         <a class="navbar-brand fs-3 d-flex align-text-middle" href="index.html">
@@ -55,27 +55,17 @@
             </li>
 
             <!-- 택시 -->
-            <li class="nav-item dropdown fs-5 mx-3">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Taxi
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
+            <li class="nav-item fs-5 mx-3">
+              <a class="nav-link" href="#">Taxi</a>
+            </li>
+
+            <!-- 굿즈 -->
+            <li class="nav-item fs-5 mx-3">
+              <a class="nav-link" href="#">Goods Market</a>
             </li>
           </ul>
 
+          <!-- 로그인 -->
           <div class="login d-flex">
             <button class="login-btn" type="submit">Login</button>
           </div>
@@ -84,7 +74,7 @@
     </nav>
 
     <!-- 헤더부분 -->
-    <header class="tophead px-3 py-1 h-80">
+    <header class="tophead w-100">
       <div class="container-fluid">
         <div class="d-flex mt-5 justify-content-center align-items-center">
           <div class="w-75 d-flex justify-content-center"> <!--justify-content-end align-items-center-->
@@ -105,43 +95,186 @@
     </header>
 
     <!-- 메인 -->
-    <main class="main-content ">
-      <div class="container-fluid main-wrap vw-">
-        <!-- 타이틀 바 -->
-        <div class="main-title d-flex justify-content-between align-items-center">
-          <span>Schedule</span>
-          <button type="button" class="btn">More</button>
+    <main class="main-content">
+      <div class="container-fluid main-wrap">
+        <!-- 메인 - 스케쥴 -->
+        <div class="main-schedule">
+
+          <!-- 메인 - 스케줄 - 타이틀 바 -->
+          <div class="main-title d-flex justify-content-between align-items-center">
+            <span>Schedule</span>
+            <button type="button" class="btn">More</button>
+          </div>
+
+          <!-- 메인 - 스케줄 - 내용 -->
+          <div class="main-schedule-wrap mt-5 d-flex justify-content-between">
+            <div class="main-schedule-content">
+              <a href="#">
+                <img src="../images/han-chenxu-YdAqiUkUoWA-unsplash.jpg" alt="" class="schedule-img mb-4">
+              </a>
+              <div class="schedule-p px-2">
+                <a href="#">아이유 단독콘서트</a>
+                <p>IU HER World Tour Concert In Seoul</p>
+                <p>2024.03.02~2024.03.03</p>
+              </div>
+            </div>
+            <div class="main-schedule-content">
+              <a href="#">
+                <img src="../images/han-chenxu-YdAqiUkUoWA-unsplash.jpg" alt="" class="schedule-img mb-4">
+              </a>
+              <div class="schedule-p px-2">
+                <a href="#">아이유 단독콘서트</a>
+                <p>IU HER World Tour Concert In Seoul</p>
+                <p>2024.03.02~2024.03.03</p>
+              </div>
+            </div>
+            <div class="main-schedule-content">
+              <a href="#">
+                <img src="../images/han-chenxu-YdAqiUkUoWA-unsplash.jpg" alt="" class="schedule-img mb-4">
+              </a>
+              <div class="schedule-p px-2">
+                <a href="#">아이유 단독콘서트</a>
+                <p>IU HER World Tour Concert In Seoul</p>
+                <p>2024.03.02~2024.03.03</p>
+              </div>
+            </div>
+          </div>
         </div>
 
-        <!-- 내용 -->
-        <div class="main-schedule mt-5 d-flex justify-content-between">
-          <div class="main-schedule-content">
-            <img src="../images/han-chenxu-YdAqiUkUoWA-unsplash.jpg" alt="" class="schedule-img mb-4">
-            <div class="schedule-p px-2">
-              <p>아이유</p>
-              <p>IU HER World Tour Concert In Seoul</p>
-              <p>2024.03.02~2024.03.03</p>
+        <!-- 메인 - 푸드맵 -->
+        <div class="main-foodmap">
+          <div class="main-foodmap-content">
+            <!-- 메인 - 푸드맵 - 타이틀 바 -->
+            <div class="main-title d-flex justify-content-between align-items-center">
+              <span># Food Map</span>
+              <button type="button" class="btn">More</button>
+            </div>
+
+            <!-- 메인 - 푸드맵 - 내용 -->
+            <div class="main-foodmap-wrap mt-5 d-flex justify-content-between ms-2">
+              <div class="map-wrap"></div>
+              <div class="hashtag-wrap d-flex flex-column justify-content-center ">
+                <button type="button" class="btn my-3">#영현아_여기서도_7인분_어때</button>
+                <button type="button" class="btn my-3">#승연아_우즈야_여기야</button>
+                <button type="button" class="btn my-3">#먹어봤도영</button>
+                <button type="button" class="btn my-3">#ㄷㅂㅇㅈ</button>
+                <button type="button" class="btn my-3">#제노의_맛그딩어</button>
+              </div>
             </div>
           </div>
-          <div class="main-schedule-content">
-            <img src="../images/han-chenxu-YdAqiUkUoWA-unsplash.jpg" alt="" class="schedule-img mb-4">
-            <div class="schedule-p px-2">
-              <p>아이유</p>
-              <p>IU HER World Tour Concert In Seoul</p>
-              <p>2024.03.02~2024.03.03</p>
+        </div>
+
+        <!-- 메인 - 택시 -->
+        <div class="main-taxi">
+          <div class="main-taxi-content">
+            <!-- 메인 - 택시 - 타이틀 바 -->
+            <div class="main-title d-flex justify-content-between align-items-center">
+              <span>Taxi</span>
+              <button type="button" class="btn">More</button>
+            </div>
+
+            <!-- 메인 - 택시 - 내용 -->
+            <div class="list-group main-taxi-wrap mt-5">
+              <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                <div class="d-flex w-100 justify-content-between">
+                  <h5 class="mb-1">인천 방향 3명 구합니다</h5>
+                  <small>3 hours ago</small>
+                </div>
+                <p class="mb-2">부평역까지 타고 가실 분 3분 더 구합니다. 현재 2명 모였습니다.</p>
+                <small>더치페이</small>
+              </a>
+              <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                <div class="d-flex w-100 justify-content-between">
+                  <h5 class="mb-1">인천 방향 3명 구합니다</h5>
+                  <small>3 hours ago</small>
+                </div>
+                <p class="mb-2">부평역까지 타고 가실 분 3분 더 구합니다. 현재 2명 모였습니다.</p>
+                <small>더치페이</small>
+              </a>
+              <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                <div class="d-flex w-100 justify-content-between">
+                  <h5 class="mb-1">인천 방향 3명 구합니다</h5>
+                  <small>3 hours ago</small>
+                </div>
+                <p class="mb-2">부평역까지 타고 가실 분 3분 더 구합니다. 현재 2명 모였습니다.</p>
+                <small>더치페이</small>
+              </a>
+              <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                <div class="d-flex w-100 justify-content-between">
+                  <h5 class="mb-1">인천 방향 3명 구합니다</h5>
+                  <small>3 hours ago</small>
+                </div>
+                <p class="mb-2">부평역까지 타고 가실 분 3분 더 구합니다. 현재 2명 모였습니다.</p>
+                <small>더치페이</small>
+              </a>
+              <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                <div class="d-flex w-100 justify-content-between">
+                  <h5 class="mb-1">인천 방향 3명 구합니다</h5>
+                  <small>3 hours ago</small>
+                </div>
+                <p class="mb-2">부평역까지 타고 가실 분 3분 더 구합니다. 현재 2명 모였습니다.</p>
+                <small>더치페이</small>
+              </a>
             </div>
           </div>
-          <div class="main-schedule-content">
-            <img src="../images/han-chenxu-YdAqiUkUoWA-unsplash.jpg" alt="" class="schedule-img mb-4">
-            <div class="schedule-p px-2">
-              <p>아이유</p>
-              <p>IU HER World Tour Concert In Seoul</p>
-              <p>2024.03.02~2024.03.03</p>
+        </div>
+
+        <!-- 메인 - 굿즈 -->
+        <div class="main-goods">
+          <div class="main-goods-content">
+            <!-- 메인 - 굿즈 - 타이틀 바 -->
+            <div class="main-title d-flex justify-content-between align-items-center">
+              <span>Goods Market</span>
+              <button type="button" class="btn">More</button>
+            </div>
+
+            <!--  메인 - 굿즈 - 내용 -->
+            <div class="main-goods-wrap mt-5 d-flex justify-content-between">
+              <div class="card" style="width: 18rem;">
+                <img src="../images/han-chenxu-YdAqiUkUoWA-unsplash.jpg" class="card-img-top" alt="">
+                <div class="card-body d-flex flex-column justify-content-between">
+                  <div class="card-content">
+                    <h5 class="card-title">2024 시그 포카 판매합니다</h5>
+                    <p class="card-text">2024년 시그 포카 누구 제외 전원 미공포 0.5로 판매합니다</p>
+                  </div>
+                  <a href="#" class="btn card-btn mt-3 align-self-center ">본문으로</a>
+                </div>
+              </div>
+              <div class="card" style="width: 18rem;">
+                <img src="../images/han-chenxu-YdAqiUkUoWA-unsplash.jpg" class="card-img-top" alt="">
+                <div class="card-body d-flex flex-column justify-content-between">
+                  <div class="card-content">
+                    <h5 class="card-title">2024 시그 포카 판매합니다</h5>
+                    <p class="card-text">2024년 시그 포카 누구 제외 전원 미공포 0.5로 판매합니다</p>
+                  </div>
+                  <a href="#" class="btn card-btn mt-3 align-self-center ">본문으로</a>
+                </div>
+              </div>
+              <div class="card" style="width: 18rem;">
+                <img src="../images/han-chenxu-YdAqiUkUoWA-unsplash.jpg" class="card-img-top" alt="">
+                <div class="card-body d-flex flex-column justify-content-between">
+                  <div class="card-content">
+                    <h5 class="card-title">2024 시그 포카 판매합니다</h5>
+                    <p class="card-text">2024년 시그 포카 누구 제외 전원 미공포 0.5로 판매합니다</p>
+                  </div>
+                  <a href="#" class="btn card-btn mt-3 align-self-center ">본문으로</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </main>
-    <div class="ex">ex</div>
+    
+    <!-- footer -->
+    <footer class="w-100">
+      <div class="container-fluid">
+        <div class="footer-info m-5">
+          <p>서울특별시 금천구 가산디지털n로 대표: XXX</p>
+          <p>000-111-2222</p>
+          <p><br>Copyright @jiiminhong  All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
