feat: change page responsive

--- a/DuckHooNetwork/html/index.html
+++ b/DuckHooNetwork/html/index.html
@@ -84,7 +84,7 @@
 
     <!-- 헤더부분 -->
     <header id="tophead" class="tophead w-100">
-      <div class="container-fluid">
+      <div class="container-responsive">
         <div class="header-margin"></div>
 
         <!-- 캐러셀 -->
@@ -127,7 +127,7 @@
           <div class="carousel-inner">
             <div
               class="carousel-item active justify-content-center"
-              data-bs-interval="5000"
+              data-bs-interval="4000"
             >
               <img
                 src="../images/1.png"
@@ -137,7 +137,7 @@
             </div>
             <div
               class="carousel-item justify-content-center"
-              data-bs-interval="5000"
+              data-bs-interval="4000"
             >
               <img
                 src="../images/2.png"
@@ -147,7 +147,7 @@
             </div>
             <div
               class="carousel-item justify-content-center"
-              data-bs-interval="5000"
+              data-bs-interval="4000"
             >
               <img
                 src="../images/3.png"
@@ -199,7 +199,7 @@
 
     <!-- 메인 -->
     <main class="main-content">
-      <div class="container-fluid main-wrap">
+      <div class="container-responsive main-wrap">
         <!-- 메인 - 스케쥴 -->
         <div class="main-schedule">
           <!-- 메인 - 스케줄 - 타이틀 바 -->
@@ -462,7 +462,7 @@
 
     <!-- footer -->
     <footer class="w-100">
-      <div class="container-fluid">
+      <div class="container-responsive">
         <div class="footer-info m-5">
           <p>서울특별시 금천구 가산디지털n로 / 대표: 김아나</p>
           <p>010-123-4567</p>
